--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,7 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 
 [dev-packages]
+pylint = "*"
 
 [packages]
 pytest = "*"
@@ -12,6 +13,8 @@ setuptools = "*"
 wheel = "*"
 pre-commit = "*"
 pytest-azurepipelines = "*"
+pygame-minesweeper-core = "*"
+pygame-minesweeper-sprites = "*"
 
 [requires]
 python_version = "3.8"
