--- a/Pipfile
+++ b/Pipfile
@@ -15,6 +15,7 @@ pre-commit = "*"
 pytest-azurepipelines = "*"
 pygame-minesweeper-core = "*"
 pygame-minesweeper-sprites = "*"
+appdirs = "*"
 
 [requires]
 python_version = "3.8"
